Adding Create Link Text and fixing with of element

--- a/src/eventCalendar.scss
+++ b/src/eventCalendar.scss
@@ -175,6 +175,7 @@ md-event-calendar {
       overflow: hidden;
       position: absolute;
       bottom: 1px;
+      width: 100%;
     }
 
     &.md-start {
