--- a/src/eventCalendar.scss
+++ b/src/eventCalendar.scss
@@ -136,7 +136,24 @@ md-event-calendar {
             padding: 8px;
             flex: 1;
           }
-
+          .md-event-calendar-cell-data-label.xs {
+            font-size: 13px;
+            margin: 10%;
+            border: #4FC3F7 1px solid;
+            background-color: #4FC3F7;
+            border-radius: 8px;
+            flex: 1;
+            text-align: center;
+          }
+          .md-event-calendar-cell-data-label.xs.md-selected {
+            font-size: 13px;
+            margin: 10%;
+            border: #81C784 1px solid;
+            background-color: #81C784;
+            border-radius: 8px;
+            flex: 1;
+            text-align: center;
+          }
           .md-event-calendar-cell-event-spacer {
             margin: 4px 0 4px 0;
             height: 23px;
